# agentflow

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: pr-blocking-e2e.yml  pr-full-python-tests.yml
docs/: 2026-03-30-control-plane-vs-workflow.md  2026-03-30-market-analysis-and-mvp.md  2026-04-01-productionization-roadmap.md  2026-04-02-console-redesign-perspective.md  2026-04-02-harness-engineering-analysis.md  2026-04-02-human-governance-panel-design.md
docs/superpowers/plans/: 2026-03-30-control-plane-core-implementation.md  2026-04-02-event-model-v1-implementation.md
docs/superpowers/specs/: 2026-03-30-control-plane-core-design.md  2026-03-30-control-plane-presentation-design.md  2026-04-02-event-model-v1-design.md
examples/: bootstrap.sh  comment.json  issues.json
migrations/: env.py  script.py.mako
migrations/versions/: 0001_bootstrap_schema.py
plugins/openclaw-agentflow/: README.md  index.ts  openclaw.plugin.json  package.json  tsconfig.json
plugins/openclaw-agentflow/types/: shims.d.ts
scripts/: run_full_python_tests.sh  run_pr_blocking_e2e.sh
src/agentflow/: cli.py  console.py  reports.py  schema.py  store.py
src/agentflow/adapters/: __init__.py  base.py  mock.py  openclaw.py  registry.py
src/agentflow/services/: __init__.py  discovery.py  (+5 more)
src/agentflow_hub/: cli.py  reports.py  schema.py  store.py
tests/: test_cli_smoke.py  test_console_api.py  test_console_flow.py  test_discovery.py  test_gates.py  test_ledger.py  test_openclaw_adapter.py  test_runner.py  test_store.py  test_triggers.py  test_webhook.py
(+9 files in other folders)
