[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentflow"
version = "0.1.0"
description = "DB-first task and issue management core for multiple coding agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tweakzx" }]
license = { text = "MIT" }
dependencies = ["alembic>=1.18.0"]

[project.scripts]
agentflow = "agentflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentflow = ["web/templates/*.html", "web/static/*.css", "web/static/*.js"]
